<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:transitionGroup="true">

    <TextView
        android:id="@+id/header_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:fontFamily="sans-serif-medium"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/discover"
        android:textColor="@color/shimmerColor"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_settings_24"
        android:tint="@color/shimmerColor"
        app:layout_constraintBottom_toBottomOf="@+id/favorite_shimmer"
        app:layout_constraintEnd_toStartOf="@+id/favorite_shimmer"
        app:layout_constraintTop_toTopOf="@+id/favorite_shimmer" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/search_shimmer"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:padding="10dp"
        android:src="@drawable/ic_search"
        android:tint="@color/shimmerColor"
        android:transitionName="@string/search_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/favorite_shimmer"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:padding="10dp"
        android:src="@drawable/ic_favorite"
        android:tint="@color/shimmerColor"
        android:transitionName="@string/favourite_transition"
        app:layout_constraintBottom_toBottomOf="@+id/search_shimmer"
        app:layout_constraintEnd_toStartOf="@id/search_shimmer"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_shimmer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent">

            <include layout="@layout/shimmer_anime_item" />

            <include layout="@layout/shimmer_anime_item" />

            <include layout="@layout/shimmer_anime_item" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/shimmer_anime_item" />

            <include layout="@layout/shimmer_anime_item" />

            <include layout="@layout/shimmer_anime_item" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/shimmer_anime_item" />

            <include layout="@layout/shimmer_anime_item" />

            <include layout="@layout/shimmer_anime_item" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>