<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/black"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:background="@color/shimmer_background"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:background="@android:color/transparent"

                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/margin_details_cover_card_top"
                android:layout_marginEnd="@dimen/margin_details_cover_card_top">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_details_card_side"
                    android:layout_marginRight="@dimen/margin_details_card_side"
                    android:background="@android:color/transparent"
                    android:elevation="2dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <FrameLayout
                                android:id="@+id/anime_details_cover_shimmer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:foreground="@drawable/selector_light"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <ImageView
                                    android:layout_marginTop="26dp"
                                    android:layout_width="120dp"
                                    android:layout_height="178dp"
                                    android:background="@color/shimmer_background"
                                    android:scaleType="centerCrop"
                                    android:transitionName="anime_cover" />
                            </FrameLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/constraintLayoutshimmer"
                                android:layout_width="140dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="24dp"
                                android:orientation="vertical"
                                app:layout_constraintStart_toEndOf="@+id/anime_details_cover_shimmer"
                                app:layout_constraintTop_toTopOf="parent">

                                <LinearLayout
                                    android:id="@+id/tv_series_cons_shimmer"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:visibility="visible"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:maxLines="1"
                                        android:text="@string/type"
                                        android:textColor="@color/shimmer_background" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="5dp"
                                        android:maxLines="1"
                                        android:text="TV Series"
                                        android:textColor="@color/shimmer_background" />
                                </LinearLayout>


                                <LinearLayout
                                    android:id="@+id/linearLayout_shimmer"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:orientation="horizontal"
                                    android:visibility="visible"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/tv_series_cons_shimmer">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:maxLines="1"
                                        android:text="@string/released"
                                        android:textColor="@color/shimmer_background" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
                                        android:layout_marginStart="5dp"
                                        android:maxLines="1"
                                        android:text="2022"
                                        android:textColor="@color/shimmer_background" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:orientation="horizontal"
                                    android:visibility="visible"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/linearLayout_shimmer">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="19dp"
                                        android:maxLines="1"
                                        android:text="@string/status"
                                        android:textColor="@color/shimmer_background" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="5dp"
                                        android:maxLines="1"
                                        android:text="Finish"
                                        android:textColor="@color/shimmer_background" />
                                </LinearLayout>


                            </androidx.constraintlayout.widget.ConstraintLayout>



                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:text="@string/description"
                            android:textColor="@color/shimmer_background" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:animateLayoutChanges="true"
                            android:background="@drawable/selector_dark"
                            android:orientation="vertical">


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:gravity="bottom"
                            android:orientation="horizontal">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textViewshimmer"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="16dp"
                                    android:text="@string/rating"
                                    android:textColor="@color/shimmer_background"
                                    android:textSize="18sp"
                                    android:textStyle="bold"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/yellow"
                                    android:textSize="18sp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="@+id/textViewshimmer"
                                    app:layout_constraintHorizontal_bias="0.489"
                                    app:layout_constraintStart_toStartOf="@+id/textViewshimmer"
                                    app:layout_constraintTop_toBottomOf="@+id/textViewshimmer"
                                    app:layout_constraintVertical_bias="0.562" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <androidx.appcompat.widget.AppCompatRatingBar
                                    style="@style/Widget.AppCompat.RatingBar.Small"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:max="100"
                                    android:numStars="10"

                                    android:progressBackgroundTint="@color/green"
                                    android:progressTint="@color/gold" />

                                <tr.xip.widget.simpleratingview.SimpleRatingView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:background="@drawable/selector_dark"
                                    app:srv_iconColor="@color/shimmer_background" />

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:src="@drawable/ic_favorite"
                        android:tint="@color/shimmerColor"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </FrameLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_details_card_side"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="@dimen/margin_details_card_side"
                    android:animateLayoutChanges="true"
                    android:background="@android:color/white"
                    android:elevation="2dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/shimmer_background"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <Spinner
                            style="@style/Widget.AppCompat.Spinner"
                            android:layout_width="match_parent"
                            android:layout_height="54dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp" />


                    </LinearLayout>
                </FrameLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>